add staff and owner roles
